--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.19",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.1.1",
     "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-less": "^5.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-source-wordpress": "^5.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1"
   }
 }
