--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^3.1.1",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-less": "^5.1.0",
+    "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-styled-components": "^4.1.0",
