--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullpage/react-fullpage": "^0.1.19",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.1.1",
+    "gatsby-image": "^3.2.0",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-less": "^5.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-phone-input-2": "^2.13.9",
+    "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
